--- a/package.json
+++ b/package.json
@@ -14,7 +14,16 @@
   "author": "Justin Makeig <jmpublic+github@makeig.com>",
   "license": "Apache 2.0",
   "dependencies": {
+    "client-certificate-auth": "^0.3.0",
+    "connect-roles": "^3.1.0",
+    "cookie-parser": "^1.3.3",
+    "cors": "^2.5.2",
     "express": "^4.11.0",
-    "marklogic": "^1.0.0-ea3"
+    "express-session": "^1.10.1",
+    "marklogic": "^1.0.0-ea3",
+    "passport": "^0.2.1",
+    "passport-http": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "sse": "0.0.6"
   }
 }
