--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Justin Makeig <jmpublic+github@makeig.com>",
   "license": "Apache 2.0",
   "dependencies": {
+    "body-parser": "^1.10.1",
     "client-certificate-auth": "^0.3.0",
     "connect-roles": "^3.1.0",
     "cookie-parser": "^1.3.3",
