--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
     "passport-local": "^1.0.0",
-    "sse": "0.0.6"
+    "sse": "0.0.6",
+    "winston": "^0.8.3",
+    "winston-posix-syslog": "0.0.7"
   }
 }
