--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "View JSON logs stored in a MarkLogic database",
   "main": "index.js",
   "scripts": {
+    "start": "node ./marklogic-listener.js 3000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
